--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <title>Energia</title>
         <!--Após criar o file style.css, o navegador precisa encontrar aonde o file está-->
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="reset.css">
     </head>
     <!--A partir daqui é o conteúdo que aparecerá no site-->
     <body>
