--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--muda o nome da aba do site no navegador-->
         <title>Energia</title>
-        <!--Após criar o file style.css, o navegador precisa encontrar aonde o file está-->
+        <!--O reset.css retira os estilos do user agent do navegador-->
         <link rel="stylesheet" href="reset.css">
+        <!--Após criar o file style.css, o navegador precisa encontrar aonde o file está-->
         <link rel="stylesheet" href="style.css">
     </head>
     <!--A partir daqui é o conteúdo que aparecerá no site-->
@@ -22,7 +23,7 @@
             <!--o src procura a imagem, pode ser um link da internet ou um arquivo dentro do repositório. O comando alt permite identificar o que tem na imagem para leitores de acessibilidade de site-->
             <!--Usamos o id=" " para chamar no style.css-->
             <img id="banner" src="banner.jpg" alt="banner de raios">
-            <!--Adiciona uma lista não ordenada-->
+            <!--<ul></ul> Adiciona uma lista não ordenada-->
             <ul>
                 <!--cada item deve ser marcado com <li></li>-->
                 <li>home</li>
@@ -40,7 +41,7 @@
                             <li class="itens">item 2</li>
                             <li class="itens">item 3</li>        
                         </ul>
-                <p id="especial">As fontes da corrente na antiga grécia, Zeus lançava raios para punir os pecadores e arrogantes. Para os romanos esta tarefa era realizada por Júpiter.</p>
+                <p>Deste a antiguidade os seres humanos tentam explicar a origem da eletricidade, as fontes da eletricidade eram fenômenos sem controle, como os relâmpagos. Na mitologia grega, Zeus lançava raios para punir os pecadores e arrogantes. Na Mitologia Romana esta tarefa era realizada por Júpiter.</p>
                 <p>Hoje sabemos que a energia elétrica é fabricada em centrais elétricas e em dispositivos chamados de pilhas. A eletricidade também pade ser armazenada nas baterias. Mas como isto acontece?</p>            
         </main>     
         <!--PARTE 3. Radapé-->
