--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <!--Usamos o id=" " para chamar no style.css-->
             <img id="banner" src="banner.jpg" alt="banner de raios">
             <!--<ul></ul> Adiciona uma lista não ordenada-->
-            <ul>
+            <ul id="nav">
                 <!--cada item deve ser marcado com <li></li>-->
                 <li>home</li>
                 <li>principal</li>
