--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
                             <li class="itens">item 2</li>
                             <li class="itens">item 3</li>        
                         </ul>
+            <h2>A origem</h2>
                 <p>Deste a antiguidade os seres humanos tentam explicar a origem da eletricidade, as fontes da eletricidade eram fenômenos sem controle, como os relâmpagos. Na mitologia grega, Zeus lançava raios para punir os pecadores e arrogantes. Na Mitologia Romana esta tarefa era realizada por Júpiter.</p>
+            <h3>Atualidade</h3>
                 <p>Hoje sabemos que a energia elétrica é fabricada em centrais elétricas e em dispositivos chamados de pilhas. A eletricidade também pade ser armazenada nas baterias. Mas como isto acontece?</p>            
         </main>     
         <!--PARTE 3. Radapé-->
