--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
             <!--o src procura a imagem, pode ser um link da internet ou um arquivo dentro do repositório. O comando alt permite identificar o que tem na imagem para leitores de acessibilidade de site-->
             <!--Usamos o id=" " para chamar no style.css-->
             <img id="banner" src="banner.jpg" alt="banner de raios">
-            <!--<ul></ul> Adiciona uma lista não ordenada-->
-            <ul class="nav">
-                <!--cada item deve ser marcado com <li></li>-->
-                <li>home</li>
-                <li>principal</li>
-                <li>contato</li>
-            </ul>
+            <nav class="menu">
+                <!--<ul></ul> Adiciona uma lista não ordenada-->
+                <ul>
+                    <!--cada item deve ser marcado com <li></li>-->
+                    <li>home</li>
+                    <li>principal</li>
+                    <li>contato</li>
+                </ul>
+            </nav>
         </header>
         <!--PARTE 2. conteúdo principal do site-->
         <main>
