--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 <!--<ul></ul> Adiciona uma lista não ordenada-->
                 <ul>
                     <!--cada item deve ser marcado com <li></li>-->
-                    <li>home</li>
-                    <li>principal</li>
-                    <li>contato</li>
+                    <li> <a href="index.html">Home</a></li>
+                    <li> <a href="principal.html">Principal</a></li>
+                    <li> <a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
         </header>
