--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <link rel="stylesheet" href="reset.css">
         <!--Após criar o file style.css, o navegador precisa encontrar aonde o file está-->
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <!--Impotação de font do google fonts-->
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Rubik+Bubbles&display=swap" rel="stylesheet">
     </head>
     <!--A partir daqui é o conteúdo que aparecerá no site-->
     <body>
