--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                 <p id="pergunta"><strong>Qual é a origem da eletricidade?</strong></p>
                     <h2>Sequência</h2>
                         <ul>
-                            <li class="itens">item 1</li>
-                            <li class="itens">item 2</li>
-                            <li class="itens">item 3</li>        
+                            <li class="itens">Origem</li>
+                            <li class="itens">Atualidade</li>
+                            <li class="itens">Um experimento chocante</li>        
                         </ul>
             <h2>A origem</h2>
                 <p>Deste a antiguidade os seres humanos tentam explicar a origem da eletricidade, as fontes da eletricidade eram fenômenos sem controle, como os relâmpagos. Na mitologia grega, Zeus lançava raios para punir os pecadores e arrogantes. Na Mitologia Romana esta tarefa era realizada por Júpiter.</p>
